--- a/zkstudy/pom.xml
+++ b/zkstudy/pom.xml
@@ -30,6 +30,17 @@
             <artifactId>curator-framework</artifactId>
             <version>4.0.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-client -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 </project>
